--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@
 #Wed May 05 14:14:00 CDT 2021
 org.gradle.jvmargs=-XX\:+UseParallelGC -Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx4096M" -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 android.useAndroidX=true
+tasks_mapbox_key_debug="TasksZN"
+tasks_google_key_debug="3e871a35017385062e4f4e893c78cde376b40fff"
